--- a/USAC_WEB/nbproject/project.properties
+++ b/USAC_WEB/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/USAC_WEB.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.cup.jar=/home/fernando/NetBeansProjects/Codigo3D_Fases/cup.jar
+file.reference.JFlex.jar=/home/fernando/NetBeansProjects/Codigo3D_Fases/JFlex.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.JFlex.jar}:\
+    ${file.reference.cup.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
